--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-course",
-  "version": "1..0",
+  "name": "react-meetups",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
